# tensorflow_serving_tonic

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh
src/: lib.rs  tensorflow.error.rs  tensorflow.rs  tensorflow.serving.rs
