[package]
name = "tensorflow-serving-tonic"
version = "0.1.0"
edition = "2021"
authors = ["marco.seravalli@gmail.com"]
description = "A prebuilt tensorflow serving client for rust based on tonic from the tensorflow serving proto files."
license = "MIT"
repository = "https://github.com/mseravalli/tensorflow-serving-tonic"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
prost-types = "0.10"
tonic = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"
